# CppBuildSystemReview

./: .gitignore
Bazel/: BUILD  WORKSPACE  build.sh
Bazel/lib/TestLib/: BUILD
Bazel/lib/TestLib/src/: Adder.cpp  BUILD
Bazel/src/: BUILD  WORKSPACE  main.cpp
buck/: BUCK  build.sh
buck/lib/TestLib/: BUCK
buck/lib/TestLib/include/: Adder.hpp
buck/src/: main.cpp
cmake/: CMakeLists.txt  build.sh
cmake/lib/TestLib/: CMakeLists.txt
conan/: build.sh
conan/Demo/: conanfile.py
conan/Demo/src/: CMakeLists.txt  main.cpp
conan/TestLib/: conanfile.py
conan/TestLib/src/: CMakeLists.txt
scons/: build.sh  sconstruct
scons/src/: Sconscript  main.cpp  main.scons
